@@ -1,26 +1,26 @@
 # Blog of Miscellaneous Projects
 <pre>
 Created by:             DMCTruong
-Date of Last Update:    August 14, 2017
+Date of Last Update:    August 26, 2017
 Version:                Projects Blog Version 2
 Website Link:		<a href="https://dmctruong.github.io/index.html">https://dmctruong.github.io/index.html</a>
 </pre>
 
 
-The Blog of Miscellaneous Projects is a website or blog that showcases some of the projects in my GitHub. Creating the website also serves to help me become a better developer. Feel free to come by and visit! The website is still in development so there are still a lot of content missing or the layout may seem a bit off. The website will eventually finish but until then, please hang tight!
+The Blog of Miscellaneous Projects is a website that showcases some of the projects in my GitHub. One of my main goals in creating this website is to use only Notepad++. I hope that by using only Notepad++, it will strengthen my skills and knowledge in developing websites. Feel free to come by and visit! The website is still in development so there are still a lot of content missing or the layout may seem a bit off. The website will eventually finish but until then, please hang tight!
 
 # Currently:
 ||
 |:------------------------------------------------------|
 |1. Working on adding more information about the projects. |
+|2. Working on X3DOM Project |
+|3. Add a "please wait" message to gallery page |
+|4. Add a page for Discord Bot project |
 
 # To-do List:
 ||
 |:----------------------------------------------------|
 |1. Add a page about the website's background |
-|2. Working on X3DOM Project |
-|3. Add a Java try-me |
-|4. Update Contact page |
-|5. Add a "please wait" message to gallery page |
-|6. Add a page for Discord Bot project |
-|7. Redo the css for each project and work on Project Blog Version 3|
+|2. Add a Java try-me |
+|3. Update Contact page |
+|4. Redo the css for each project and work on Project Blog Version 3|
