@@ -19,7 +19,7 @@
         <div class="wrapper">
             <div id="tools" align="center">
                 <h2 class="spacing_medium">Tools and Helpers</h2>
-                <p align="justify">This category contains some tools that I have created and use daily to help speed up productivity by automating common tasks and reducing time that are spent doing these tasks. I hope these tools are helpful for you too! More tools will be created and added in the future.</p>
+                <p align="justify">This category contains some tools that I have created that I use daily to help speed up productivity by automating common tasks and reducing time that are spent doing these tasks. I hope these tools are helpful for you too, more tools will be created and added in the future.</p>
             </div>
             <div class="clear" id="container" style="width: 860px;">
                 <section id="tools_projects">  
@@ -36,6 +36,7 @@
                             </article>                               
                         </li>
                     </ul>
+					<p align="center" style="padding-top: 20px;">Below are some tools that I use daily with my work that are created by talented people.<br>I recommend taking a look in their project pages!</p>
 					<ul>
                         <li>
                             <article class="clear">
